<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingBottom="5dp"
            android:text="@string/title"
            android:textSize="@dimen/high"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textSize="@dimen/medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/dot"
                android:textSize="@dimen/medium" />

            <TextView
                android:id="@+id/time_ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_ago"
                android:textSize="@dimen/medium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_url"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/news_image">

        </ImageView>
    </LinearLayout>


</LinearLayout>





